# adminx-examples

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/admin/: initializer.rs  mod.rs
src/admin/resources/: config_resource.rs  contact_resource.rs  event_attendee_resource.rs  event_resource.rs  image_resource.rs  mod.rs  notification_resource.rs  picture_resource.rs  user_resource.rs
src/config/: constants.rs  env_vars.rs  mod.rs
src/db/: mongo.rs
src/dbs/: mongo.rs
src/enums/: common_enums.rs  mod.rs  request_enums.rs  struct_enums.rs
src/errors/: custom_error.rs  global_error.rs  mod.rs
src/jobs/: mod.rs  notify_user.rs  qrush.rs
src/libs/: constant_library.rs  custom_library.rs  custom_message.rs  custom_regex.rs  custom_validators.rs  general_library.rs  mod.rs
src/macros/: field_check_macros.rs  global_error_macros.rs  handle_custom_error.rs  mod.rs
src/models/: config.rs  config_model.rs  contact.rs  event.rs  event_attendee.rs  image.rs  image_model.rs  invitation.rs  mod.rs  notification.rs  notification_model.rs  picture.rs  user.rs
src/qrushes/: mod.rs  qrush_integrated.rs
src/qrushes/crons/: daily_report_job.rs  mod.rs
src/qrushes/jobs/: mod.rs  notify_user.rs
src/requests/: mod.rs
src/requests/constants/: mod.rs  open_constant.rs
src/requests/enums/: event_enums.rs  mod.rs
src/requests/messages/: mod.rs  open_message.rs
src/requests/regexes/: mod.rs  open_regex.rs
src/requests/structures/: event_structure.rs  mod.rs  open_structure.rs
src/requests/validators/: bool_validator.rs  close_validator.rs  event_validators.rs  in_validator.rs  mod.rs  open_validator.rs
src/services/: data_service.rs  mod.rs  redis_service.rs  srotas_vector.rs
src/srotas/: initialize.rs  mod.rs  service.rs  xtest
src/structs/: enums.rs
src/utilities/: bason_utility.rs  mod.rs  s3_utility.rs
src/utils/: mod.rs  s3_util.rs
