[package]
name = "admix-example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = { version = "2.4", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
tokio-native-tls = "0.3"

# Use the local admix crate
qrush = { path="/Users/inxmaurya/Documents/workspace/SNM/crates/qrush" }

adminx = { path = "/Users/inxmaurya/Documents/workspace/SNM/crates/adminx" }
dotenv = "0.15.0"
log = "0.4.27"
once_cell = "1.21.3"
tokio = "1.46.1"
async-trait = "0.1.88"
futures = "0.3.31"
anyhow = "1.0.98"
schemars = { version = "0.8", features = ["derive"] }
actix-session = "0.10.1"
base64 = "0.22.1"
hex = "0.4.3"
sha2 = "0.10.9"
tracing = "0.1.41"




