[package]
name = "test"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"


[dependencies]
actix-web = "4"
mongodb = { version = "2.4", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
tokio-native-tls = "0.3"

# Use the local admix crate
qrush = { path="/Users/xsm/Documents/workspace/XSM/crates/qrush" }

adminx = { path = "/Users/xsm/Documents/workspace/XSM/crates/adminx" }

debugx = { path = "/Users/xsm/Documents/workspace/XSM/crates/debugx" }

dotenv = "0.15.0"
log = "0.4.27"
once_cell = "1.21.3"
tokio = "1.46.1"
async-trait = "0.1.88"
futures = "0.3.31"
anyhow = "1.0.98"
schemars = { version = "0.8", features = ["derive"] }
actix-session = "0.10.1"
base64 = "0.22.1"
hex = "0.4.3"
sha2 = "0.10.9"
tracing = "0.1.41"

aws-config = "1.6.0"
aws-sdk-s3 = "1.70.0"
aws-types = "1.3.0"
aws-credential-types = "1.2.0"

redis = { version = "0.29.5", features = ["tokio-native-tls-comp"] }



strum = "0.26"
strum_macros = "0.26"
convert_case = "0.6"
chrono = "0.4.41"
reqwest = { version = "0.11", features = ["multipart", "json", "stream"] }
actix-http = "3.11.0"


thiserror = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-service = "2.0.3"
nanoid = "0.4.0"
actix-multipart = "0.7.2"

# Srotas vector SDK
srotas_vector_sdk = { path = "/Users/xsm/Documents/workspace/XSM/crates/srotas_vector_sdk" }
uuid = "1.18.1"


