[package]
name = "xard-be"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Xard - Smart Contact Mangager"
authors = ["Snm Maurya <sxmmaurya@gmail.com>"]



[dependencies]
actix-web = "4"
actix = "0.13"
actix-cors = "0.6"
actix-service = "2.0"
mongodb = { version = "2.4", features = ["tokio-runtime"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "8"
rand = "0.8"
redis = { version = "0.30.0", features = ["tokio-native-tls-comp", "cluster"] }
tokio-native-tls = "0.3"
lettre = { version = "0.10", features = ["smtp-transport", "tokio1-native-tls"] }
reqwest = { version = "0.11", features = ["multipart", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
tracing = "0.1"
tracing-actix-web = "0.7"
qrcode = "0.12"
svg = "0.13"
uuid = { version = "1", features = ["serde", "v4"] }
once_cell = "1"
futures = "0.3"
actix-web-httpauth = "0.8"
env_logger = "0.11"
actix-web-prom = "0.7"
prometheus = "0.13"
serde_with = "3.0" 
anyhow = "1.0"
base64 = "0.21"
lazy_static = "1.4"
tera = "1.19.1"
actix-files = "0.6"
sha2 = "0.10"
bson = { version = "2.15", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
regex = "1.10"
aws-config = "1.6.0"
aws-sdk-s3 = "1.70.0"
aws-types = "1.3.0"
aws-credential-types = "1.2.0"
validator = { version = "0.16", features = ["derive"] }
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
slugify = "0.1"

actix-multipart = "0.6"
mime_guess = "2.0"
image = "0.25"
base32 = "0.4"
otpauth = "0.5.1"
urlencoding = "2.1.3"

strum = "0.26"
strum_macros = "0.26"

nanoid = "0.4"

adminx = "0.2.4"
convert_case = "0.8.0"
actix-session = "0.10.1"
schemars = { version = "0.8", features = ["derive"] }
actix-http = "3.11.0"
tracing-subscriber = "0.3.19"
csv = "1.3.1"
async-trait = "0.1.89"

